--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@google-cloud/functions-framework": "^1.6.0",
     "env-cmd": "^10.1.0",
     "request": "^2.88.2",
-    "yaml2json": "^1.0.2"
+    "yamljs": "^0.3.0"
   },
   "scripts": {
     "start": "yaml2json .env.dev.yaml > .env.json && env-cmd -r ./.env.json functions-framework --target=helloWorld"
