--- a/.env.dev.yaml
+++ b/.env.dev.yaml
@@ -1,1 +1,16 @@
-FB_GROUP_LINK_LIST_URL: "CHANGEME"
+PROJECT_ID: "CHANGEME"
+KEY_FILE_NAME: "CHANGEME"
+KIND_NAME: "CHANGEME"
+KEY_NAME_ID: "CHANGEME"
+FB_GROUP_ID: "CHANGEME"
+FB_API_TOKEN: "CHANGEME"
+SPOTIFY_REFRESH_TOKEN: "CHANGEME"
+SPOTIFY_PLAYLIST_ID: "CHANGEME"
+SPOTIFY_USERNAME: "CHANGEME"
+SPOTIFY_PASSWORD: "CHANGEME"
+FB_API_URL: "https://graph.facebook.com/"
+FB_FEED_ENTITY: "/feed?fields=attachments,message&limit=5&access_token="
+SPOTIFY_SEARCH_URL: "https://api.spotify.com/v1/search?q="
+SPOTIFY_PLAYLIST_COLLECTION_URL: "https://api.spotify.com/v1/playlists/"
+SPOTIFY_TRACKS_BY_URI_ENTITY: "/tracks?uris="
+SPOTIFY_REFRESH_URL: "https://accounts.spotify.com/api/token"
